--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
      <p>私の名前は大津樹聖です。趣味は体を動かすことです。</p>
      <p>私は井上遥喜です。趣味は映画鑑賞です。</p>
      <p>ミゲル：好きな食べ物はSTEAKです。</p>
+     <p>私の名前は壽福瑠斗です。アニメが好きです。</p>
 </body>
 </html>
