--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- 自己紹介を入力 -->
       <ul>
         <li>ミゲル：好きな食べ物はSTEAKです。</li>
+        <li>宮：好きな犬はたべものです。</li>
       </ul>
 </body>
 </html>
